<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".TitleFragment">

        <TextView
            android:id="@+id/title_fragment_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="72sp" />

        <ImageView
            android:id="@+id/title_fragment_iv_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/touch_description"
            android:src="@drawable/ic_touch" />

        <TextView
            android:id="@+id/title_fragment_tv_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/instructions_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/title_fragment_bt_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:fontFamily="monospace"
            android:text="@string/play_button_text"
            android:textSize="18sp" />
    </LinearLayout>
</layout>